@@ -1,3 +1,7 @@
+2008-12-12  Jonh Wendell <jwendell@gnome.org>
+
+	* src/vinagre-applet.c: Make applet use new bookmarks structure.
+
 2008-12-11  Jonh Wendell <jwendell@gnome.org>
 
 	* data/vinagre.1: New manual page, by Emilio Pozuelo Monfort and
